<?xml version="1.0"?>
<package format="3">
  <name>make87_listener_cpp</name>
  <version>0.0.1</version>
  <description>Minimal ROS 2 C++ listener</description>
  <maintainer email="nisse@make87.com">make87</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
